feat: 使用StandardCharsets代替字符串